# TestShenanigans

./: Cargo.toml  README.md
src/: animals.rs  arc_mutex.rs  builder_pattern.rs  calculator.rs  city_closures.rs  company.rs  const_functions.rs  const_generics.rs  country.rs  deref.rs  derefmut.rs  downcasting.rs  fantasy.rs  main.rs  multiple_errors.rs  multiple_tests.rs  mutable_statics.rs  mutex_scoped_threads.rs  print_things.rs  rand.rs  return_closures.rs  rolling_dice_with_rand.rs  simple_channel.rs  static_mut.rs  transmute.rs
src/chapter_17/: mod.rs  more_chrono_fun.rs  standard_time.rs  test_anyhow.rs  test_blanket_trait.rs  test_blanket_traits_with_errors.rs  test_lazy_static.rs  test_naive.rs  test_once_cell.rs  test_serde.rs  test_thiserror.rs  tests_parallelism.rs  two_blanket_trait_example.rs
src/chapter_18/: async_with_try_join.rs  async_without_join_macro.rs  creating_files.rs  mod.rs  test_args.rs  test_blocking_get.rs  test_reqwest_with_tokio.rs  test_stdin.rs  test_var_logging.rs  test_vars.rs  using_open_options.rs
src/chapter_19/: async_with_select.rs  mod.rs
src/chapter_20/: add_trait.rs  arrays_have_iterators.rs  bools.rs  checked_add.rs  mod.rs
src/chapter_21/: input_handling.rs  mod.rs  test_thread_local.rs
src/chapter_22/: mod.rs  test_macros.rs
