[package]
name = "TestShenanigans"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
